Add Rollup for client side bundling

--- a/executor/src/static/index.html
+++ b/executor/src/static/index.html
@@ -85,6 +85,6 @@
   <script src="http://cdnjs.cloudflare.com/ajax/libs/ace/1.2.3/theme-twilight.js" type="text/javascript" charset="utf-8"></script>
   <script src="http://cdnjs.cloudflare.com/ajax/libs/ace/1.2.3/mode-javascript.js" charset="utf-8"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/fetch/0.11.0/fetch.min.js" charset="utf-8"></script>
-  <script src="script.js" charset="utf-8"></script>
+  <script src="bundle.js" charset="utf-8"></script>
 </body>
 </html>
