Move validation into module and calls into Functions model

--- a/executor/src/static/index.html
+++ b/executor/src/static/index.html
@@ -33,7 +33,7 @@
       <!-- Right side -->
       <div class="header-right header-menu">
         <span class="header-item">
-          <a class="button" href="#">Login</a>
+          <a class="button" href="/api/login">Login</a>
         </span>
       </div>
     </div>
