Setup rollup and snabbdom

--- a/executor/src/static/index.html
+++ b/executor/src/static/index.html
@@ -53,6 +53,7 @@
     </div>
     <div class="column is-third">
       <div class="content" style="margin: 20px 10px;">
+        <div id="placeholder"></div>
         <h1 class="title">Script playground</h1>
         <p class="control is-grouped">
           <input type="text" class="input" id="codeInput" value="test value" />
